corrected error in login form that fields became blank while submitting if there was unsuccessfull login previously

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -168,6 +168,7 @@
         background-color: #46aae9;
         color: white;
         border-width: 0px;
+        width: 120px;
     }
 
     form.form_builder input[type="submit"]:hover{
