created background color for disabled button for FormBuilder

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -174,4 +174,8 @@
     form.form_builder input[type="submit"]:hover{
         background-color:#0076c0;
     }
+
+    form.form_builder input[type="submit"]:disabled{
+        background-color: gray;
+    }
 }
