added footer with background for largest screen sizes, configured Tailwindcss color variable value and added this color variable also to page header and menu items background as they have same background

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,8 @@
     --breakpoint-xl: 1366px;
 
     --font-sans: 'Source Sans Pro', 'sans-serif';
+
+    --color-gray-300: #c6c9ce;
 }
 
 @layer base {
