created option to pass class names for checkbox input and its next sibling using component properties; allows to pass Tailwindcss classes to checkbox input

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -124,6 +124,23 @@
         content: ":";
     }
 
+    
+    /*for checkbox field label comes after checkbox, label text weight is not bold, remove column from checkbox field label*/
+    form.form_builder .field.checkbox {
+        display: flex;
+        align-items: center;
+    }
+    form.form_builder .field.checkbox label {
+        font-weight: normal;
+        margin-bottom: 0px;
+    }
+    form.form_builder .field.checkbox label::after {
+        content: "";
+    }
+    form.form_builder .field.checkbox > div {
+        padding-right: 10px;
+    }
+
     form.form_builder textarea,
     form.form_builder [type="text"],
     form.form_builder [type="password"] {
