--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,7 +126,7 @@
 
     
     /*for checkbox field label comes after checkbox, label text is not bold, remove column from checkbox field label*/
-    form.form_builder .field.checkbox {
+    form.form_builder .field.checkbox label{
         display: flex;
         align-items: center;
     }
@@ -137,7 +137,7 @@
     form.form_builder .field.checkbox label::after {
         content: "";
     }
-    form.form_builder .field.checkbox > div {
+    form.form_builder .field.checkbox  label > div {
         padding-right: 10px;
     }
 
