--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,7 +145,8 @@
     }
 
     form.form_builder input,
-    form.form_builder textarea {
+    form.form_builder textarea,
+    form.form_builder select {
         display: block;
         padding: 5px;
         border: 1px solid #c6c9ce;
@@ -153,9 +154,14 @@
         width: 100%;
     }
 
+    form.form_builder select {
+        width: unset;
+    }
+
     @media screen and (min-width: 1024px) {
         form.form_builder input,
-        form.form_builder textarea {
+        form.form_builder textarea,
+        form.form_builder select {
             padding: 5px 7px;
         }
     }
@@ -170,13 +176,15 @@
     }
 
     form.form_builder textarea:focus,
-    form.form_builder input:focus{
+    form.form_builder input:focus,
+    form.form_builder select:focus{
         border-color: #6b7280;
         outline: none;
     }
     /*when disabled gray color for input elements, textarea text, except text on submit button*/
     form.form_builder input:is([disabled]):not([type="submit"]),
-    form.form_builder textarea[disabled] {
+    form.form_builder textarea[disabled],
+    form.form_builder select[disabled]{
         color: gray;
     }
 
